--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,15 @@
 [tool.poetry]
 name = "mywellnezz"
-version = "0.1.0"
+version = "1.2.0"
 description = ""
 authors = ["AeonDave"]
 readme = "README.md"
+packages = [
+    { include = "mywellnezz" },
+    { include = "app", from = "mywellnezz" },
+    { include = "models", from = "mywellnezz" },
+    { include = "modules", from = "mywellnezz" },
+]
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -17,6 +23,9 @@ pillow = "^10.3.0"
 pwinput = "^1.0.3"
 python-dateutil = "^2.9.0.post0"
 loguru = "^0.7.2"
+
+[tool.poetry.scripts]
+mywellnezz = "mywellnezz.main:start"
 
 [build-system]
 requires = ["poetry-core"]
