--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.11,<3.12"
+python = ">=3.11,<3.13"
 prettytable = "^3.10.0"
 colorama = "^0.4.6"
 psutil = "^5.9.8"
@@ -20,7 +20,7 @@ aiohttp = "^3.9.5"
 aioconsole = "^0.7.0"
 pillow = "^10.3.0"
 pwinput = "^1.0.3"
-python-dateutil = "^2.9.0.post0"
+python-dateutil = "^2.9.0"
 loguru = "^0.7.2"
 pyinstaller = "^6.6.0"
 mouse = "^0.7.1"
