--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mywellnezz"
-version = "1.2.0"
+version = "1.2.1"
 description = ""
 authors = ["AeonDave"]
 readme = "README.md"
@@ -16,7 +16,6 @@ python = ">=3.11,<3.13"
 prettytable = "^3"
 colorama = "^0.4"
 psutil = "^6"
-aiohttp = "^3"
 aioconsole = "^0.8"
 pillow = "^10"
 pwinput = "^1"
@@ -24,11 +23,11 @@ python-dateutil = "^2"
 loguru = "^0.7"
 pyinstaller = "^6"
 mouse = "^0.7"
+httpx = "^0.27"
 
 [tool.poetry.scripts]
 mywellnezz = "mywellnezz.main:start"
 build = "pyinstaller:install"
-
 
 [build-system]
 requires = ["poetry-core"]
